--- a/themes/fivealive-lite/scss/_tiki-selectors.scss
+++ b/themes/fivealive-lite/scss/_tiki-selectors.scss
@@ -214,21 +214,21 @@ header.header {
 
 //.sitelogo img {max-height: 34px; width: auto; margin-bottom: 1em;}
 
-.form-control,
-select,
-input[type="text"],
-input[type="password"],
-input[type="file"],
-input[type="email"],
-input[type="file"],
-input[type="search"],
-input[type="number"],
-input#login-pass,
-textarea,
-.adminoptionbox option {
-    background-color: $form-control-bg; //#f8f9d4;
-    border-color: $form-control-border-colors; // #F5FB86 #FBFBEE #FBFBEE #F5FB86;
-}
+//.form-control,
+//select,
+//input[type="text"],
+//input[type="password"],
+//input[type="file"],
+//input[type="email"],
+//input[type="file"],
+//input[type="search"],
+//input[type="number"],
+//input#login-pass,
+//textarea,
+//.adminoptionbox option {
+//    background-color: $form-control-bg; //#f8f9d4;
+//    border-color: $form-control-border-colors; // #F5FB86 #FBFBEE #FBFBEE #F5FB86;
+//}
 
 .navbar-collapse {
     border: none;
